# shaderc_poll

./: .gitignore  CMakeLists.txt  README.md  run_scp.ps1  run_scp.sh  shaderc_poll.sln  shaderc_poll.vcxproj
src/: ColoredConsole.cpp  ColoredConsole.h  ShaderCPoll.cpp  ShaderCPoll.h  ShaderCPollHeader.h  Utils.cpp  Utils.h  main.cpp
test/test_input/: test.fs  test.vs
test/test_input/subfolder1/: test-sub.vs354
test/test_input/subfolder1/subfolder2/: test-sub - Copy (10).fs  test-sub.fs  test-sub.vs
test/test_input/subfolder1/subfolder2/subfolder3/: test-sub - Copy (12) - Copy.fs  test-sub - Copy (4).fs  test-sub - Copy (7) - Copy.fs  test-sub - Copy (8).vs  test-sub - Copy (9) - Copy.fs
